continue swag
