# src/routes/transactions.js
@@ -6,6 +6,10 @@ const getIncomes = require("../controller/transactions/getIncomes");
 const addIncome = require("../controller/transactions/addInome");
 const getTransactionsPeriodData = require("../controller/transactions/periodData");
 const authMiddleware = require("../middleware/authMiddleware");
+const {
+  getExpenseCategories,
+  getIncomeCategories,
+} = require("../controller/categories/getCategoriesController");
 
 router.get("/expense", authMiddleware, getExpenses);
 
@@ -14,6 +18,10 @@ router.post("/expense", authMiddleware, addExpense);
 router.get("/income", authMiddleware, getIncomes);
 
 router.post("/income", authMiddleware, addIncome);
+
+router.get("/income-categories", authMiddleware, getIncomeCategories);
+
+router.get("/expense-categories", authMiddleware, getExpenseCategories);
 
 router.get("/period-data", authMiddleware, getTransactionsPeriodData);
 module.exports = router;
