# src/swagger/swagger.yaml
@@ -66,6 +66,10 @@ paths:
           description: User successfully logged out
         "401":
           description: Unauthorized
+        "400":
+          description: No token provided
+        "404":
+          description: User not found
 
   /auth/refresh:
     post:
@@ -91,6 +95,8 @@ paths:
           description: Unauthorized or Invalid refresh token
         "400":
           description: Invalid input data
+        "404":
+          description: User not found
 
   /user/balance:
     patch:
@@ -145,8 +151,6 @@ paths:
                       $ref: "#/components/schemas/Transaction"
         "401":
           description: Unauthorized
-        "404":
-          description: User not found
 
   /transaction/expense:
     get:
@@ -164,8 +168,12 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Transaction"
+        "400":
+          description: no token provided
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
 
     post:
       tags:
@@ -180,7 +188,7 @@ paths:
             schema:
               $ref: "#/components/schemas/AddTransactionRequest"
       responses:
-        "201":
+        "200":
           description: Expense successfully added
           content:
             application/json:
@@ -190,6 +198,8 @@ paths:
           description: Invalid input data
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
 
   /transaction/income:
     get:
@@ -207,8 +217,12 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Transaction"
+        "400":
+          description: no token provided
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
 
     post:
       tags:
@@ -223,7 +237,7 @@ paths:
             schema:
               $ref: "#/components/schemas/AddTransactionRequest"
       responses:
-        "201":
+        "200":
           description: Income successfully added
           content:
             application/json:
@@ -233,6 +247,8 @@ paths:
           description: Invalid input data
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
 
   /transaction/period-data:
     get:
@@ -260,51 +276,84 @@ paths:
           description: Invalid date format
         "401":
           description: Unauthorized
+        "404":
+          description: User not found
+
+  /transaction/expense-categories:
+    get:
+      tags:
+        - Transactions
+      summary: Get expense categories
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: Successfully retrieved expense categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        "401":
+          description: Unauthorized
+        "404":
+          description: User not found
+
+  /transaction/income-categories:
+    get:
+      tags:
+        - Transactions
+      summary: Get income categories
+      security:
+        - BearerAuth: []
+      responses:
+        "200":
+          description: Successfully retrieved income categories
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
+        "401":
+          description: Unauthorized
+        "404":
+          description: User not found
 
 components:
-  securitySchemes:
-    BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
   schemas:
     RegisterRequest:
       type: object
       properties:
         email:
           type: string
-          format: email
+          example: example@example.com
         password:
           type: string
           minLength: 6
+          example: Password123
       required:
         - email
         - password
-
     RegisterResponse:
       type: object
       properties:
-        status:
-          type: string
-          example: success
-        message:
-          type: string
-          example: User created
         user:
           type: object
           properties:
             email:
               type: string
-              format: email
-
+              example: test@example.com
     LoginRequest:
       type: object
       properties:
         email:
           type: string
-          format: email
+          example: example@example.com
         password:
           type: string
+          example: Password123
       required:
         - email
         - password
@@ -314,25 +363,47 @@ components:
       properties:
         accessToken:
           type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         refreshToken:
           type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
         sid:
           type: string
+          example: TvhtZeGfqdsGJM8Kx6ncI
         user:
           type: object
           properties:
             email:
               type: string
-              format: email
+              example: test@example.com
             balance:
               type: number
+              example: 4522
             id:
               type: string
+              example: vAuSEoLO53AwiZHWCiAmM
             transactions:
               type: array
               items:
-                $ref: "#/components/schemas/Transaction"
-
+                type: object
+                properties:
+                  _id:
+                    type: string
+                    example: 66f750c939f7039284fa05ac
+                  description:
+                    type: string
+                    example: Groceries
+                  amount:
+                    type: number
+                    example: 122
+                  date:
+                    type: string
+                    example: 2023-06-05
+                  category:
+                    type: array
+                    items:
+                      type: string
+                    example: Food
     RefreshTokenRequest:
       type: object
       properties:
@@ -356,6 +427,7 @@ components:
       properties:
         balance:
           type: number
+          example: 1000
       required:
         - balance
 
@@ -365,39 +437,61 @@ components:
         email:
           type: string
           format: email
+          example: example@example.com
         balance:
           type: number
-
+          example: 1000
     Transaction:
+      summary: Income or Expense
       type: object
       properties:
         _id:
           type: string
         description:
           type: string
+          example: "Grocery shopping"
         amount:
           type: number
+          example: 1000
         date:
           type: string
           format: date
+          example: 2024-05-01
         category:
           type: array
           items:
             type: string
+            enum:
+              [
+                "Products",
+                "Alcohol",
+                "Entertainment",
+                "Health",
+                "Transport",
+                "Housing",
+                "Technique",
+                "Communal, communication",
+                "Sports, hobbies",
+                "Education",
+                "Other",
+              ]
         type:
           type: string
-          enum: [income, expense]
-
+          enum: ["income", "expense"]
+          example: income
     AddTransactionRequest:
       type: object
       properties:
         description:
           type: string
+          example: "Grocery shopping"
         amount:
           type: number
+          example: 1000
         date:
           type: string
           format: date
+          example: 2024-05-01
         category:
           oneOf:
             - type: string
@@ -412,23 +506,24 @@ components:
             - Transport
             - Housing
             - Technique
-            - Communal, communication
-            - Sports, hobbies
+            - "Communal, communication"
+            - "Sports, hobbies"
             - Education
             - Other
             - Salary
-            - Add. income
-        required:
-          - description
-          - amount
-          - date
-          - category
+            - "Add. income"
+      required:
+        - description
+        - amount
+        - date
+        - category
 
     AddTransactionResponse:
       type: object
       properties:
         newBalance:
           type: number
+          example: 1000
         transaction:
           $ref: "#/components/schemas/Transaction"
 
@@ -440,25 +535,51 @@ components:
           properties:
             total:
               type: number
+              example: 1000
             incomesData:
               type: object
+              example: 2024-05-01
         expenses:
           type: object
           properties:
             total:
               type: number
+              example: 1000
             expensesData:
               type: object
-      example:
-        incomes:
-          total: 5000
-          incomesData:
-            Salary:
-              total: 5000
-              Wypłata: 5000
-        expenses:
-          total: 122
-          expensesData:
-            Food:
-              total: 122
-              "Zakupy spożywcze": 122
+              example: 2024-05-01
+
+    ExpenseCategories:
+      type: object
+      properties:
+        categories:
+          type: array
+            type: string
+            enum:
+            [
+              "Products",
+              "Alcohol",
+              "Entertainment",
+              "Health",
+              "Transport",
+              "Housing",
+              "Technique",
+              "Communal, communication",
+              "Sports, hobbies",
+              "Education",
+              "Other",
+            ]
+      description: Expense categories
+    IncomeCategories:
+      type: object
+      properties:
+        categories:
+          type: array
+            type: string
+            enum: ["Salary", "Add. income"]
+      description: Income categories
+securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
